@@ -20,19 +20,31 @@ path = "src/main.rs"
 [dependencies]
 anyhow = "1.0.66"
 byte-unit = "4.0.17"
+ciborium = { version = "0.2.0", optional = true }
 clap = { version = "4.0.29", features = ["derive", "wrap_help"] }
 clap_complete = "4.0.6"
 dialoguer = { version = "0.10.2", default-features = false, features = ["password"] }
-fraction = { version = "0.12.1", default-features = false }
+fraction = { version = "0.12.2", default-features = false }
 once_cell = "1.16.0"
 scryptenc = "0.4.1"
+serde = { version = "1.0.149", features = ["derive"], optional = true }
+serde_json = { version = "1.0.89", optional = true }
+serde_yaml = { version = "0.9.14", optional = true }
 sysexits = "0.3.4"
 sysinfo = "0.26.8"
 thiserror = "1.0.37"
+toml = { version = "0.5.9", optional = true }
 
 [dev-dependencies]
-assert_cmd = "2.0.6"
-predicates = "2.1.3"
+assert_cmd = "2.0.7"
+predicates = "2.1.4"
+
+[features]
+default = ["cbor", "json", "toml", "yaml"]
+cbor = ["dep:ciborium", "dep:serde"]
+json = ["dep:serde", "dep:serde_json"]
+toml = ["dep:serde", "dep:toml"]
+yaml = ["dep:serde", "dep:serde_yaml"]
 
 [profile.release]
 lto = true
