@@ -6,7 +6,7 @@
 
 = rscrypt-info(1)
 // Specify in UTC.
-:docdate: 2022-11-18
+:docdate: 2022-12-05
 :doctype: manpage
 ifdef::revnumber[:mansource: rscrypt {revnumber}]
 :manmanual: General Commands Manual
@@ -32,6 +32,38 @@ _FILE_::
   If "-" is specified, data will be read from stdin.
 
 == OPTIONS
+
+ifdef::cbor,json,toml,yaml[]
+*-f*, *--format* _FORMAT_::
+
+  Output format.
+
+  The possible values are:{blank}:::
+
+ifdef::cbor[]
+    *cbor*::::
+
+      CBOR.
+endif::cbor[]
+
+ifdef::json[]
+    *json*::::
+
+      JSON.
+endif::json[]
+
+ifdef::toml[]
+    *toml*::::
+
+      TOML.
+endif::toml[]
+
+ifdef::yaml[]
+    *yaml*::::
+
+      YAML.
+endif::yaml[]
+endif::[]
 
 *-h*, *--help*::
 
