@@ -15,10 +15,7 @@ use std::{
 use anyhow::Context;
 use dialoguer::{theme::ColorfulTheme, Password};
 
-/// Removes trailing newline.
-fn remove_newline(password: &str) -> String {
-    password.trim_end_matches(&['\r', '\n'][..]).to_string()
-}
+use crate::utils;
 
 /// Reads the password from /dev/tty.
 pub fn read_password_from_tty() -> anyhow::Result<String> {
@@ -36,7 +33,7 @@ pub fn read_password_from_stdin() -> anyhow::Result<String> {
     io::stdin()
         .read_line(&mut buf)
         .context("could not read password from stdin")?;
-    let password = remove_newline(&buf);
+    let password = utils::remove_newline(&buf);
     Ok(password)
 }
 
@@ -63,6 +60,6 @@ pub fn read_password_from_file(path: &Path) -> anyhow::Result<String> {
     reader
         .read_line(&mut buf)
         .with_context(|| format!("could not read password from {}", path.display()))?;
-    let password = remove_newline(&buf);
+    let password = utils::remove_newline(&buf);
     Ok(password)
 }
